frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: frontend

spec:
    replicas: 1
    selector:
      matchLabels:
        app: frontend
    template:
      metadata:
        labels:
          app: frontend
      spec:
        containers:
        - name: frontend
          image: 475834860148.dkr.ecr.ap-south-1.amazonaws.com/mern-frontend:8
          ports: 
          - containerPort: 3000
