frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: frontend

spec:
  selector:
      app: frontend
  ports:
  - port: 3000
    targetPort: 3000
